# embedding_metadata_document_rag

./: README.md  embedded_metadata.py  main.py  pyproject.toml  sample.txt
